= Changelog

== v2024.7.0 (work in progress)

=== Shapes

- Add support for text alignment on labels

=== Architectural decision records

[ADR-151] Improve Diagram Subscription Lifecycle

=== Deprecation warning

=== Breaking changes

=== Dependency update

- https://github.com/eclipse-sirius/sirius-web/issues/3510[#3510] [releng] Switch to Spring Boot 3.2.5
- [releng] Switch to `@apollo/client` 3.10.4
- [releng] Switch to `graphql` 16.8.1
- [releng] Switch to `vite` 5.2.11, `vitest` 1.6.0, `@vitest/coverage-v8` 1.6.0 and `@vitejs/plugin-react` 4.3.0
- [releng] Switch to `@types/node` 20.12.12
- [releng] Switch to `typescript` 5.4.5
- [releng] Switch to `turbo` 1.13.3
- [releng] Switch to `jacoco` 0.8.12
- [releng] Switch to `maven-checkstyle-plugin` 3.3.1
- [releng] Remove the dependency to `reflect-metadata`
- [releng] Switch to `subscriptions-transport-ws` 0.11.0
- https://github.com/eclipse-sirius/sirius-web/issues/3466[#3466] [gantt] Move to @ObeoNetwork/gantt-task-react 0.4.14 to benefit for enhancements
- [releng] Switch to EMF Json 2.3.10


=== Bug fixes

- https://github.com/eclipse-sirius/sirius-web/issues/3515[#3515] [form] Form pages appear in the addition order
- https://github.com/eclipse-sirius/sirius-web/issues/2981[#2981] [diagram] Fix a warning when an edge was hidden
- https://github.com/eclipse-sirius/sirius-web/issues/3517[#3517] [diagram] Prevent edge path for rotatable border node to be inconsistent
- https://github.com/eclipse-sirius/sirius-web/issues/2908[#2908] [diagram] Homogenize delete icon
- https://github.com/eclipse-sirius/sirius-web/issues/3485[#3485] [diagram] Add a validation error message when background value is missing
- https://github.com/eclipse-sirius/sirius-web/issues/3480[#3480] [diagram] Fix an error that prevents border color to be properly applied
- https://github.com/eclipse-sirius/sirius-web/issues/3538[#3538] [fomrs] Register the Details view description in the editing context